// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithLimit /> by default matches with snapshot 1`] = `
<div
  className="sc-EHOje fvUlWx"
>
  <input
    className="sc-bwzfXH eiEJux sc-ifAKCX eUaGxb"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-bZQynM imdljl"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="sc-EHOje fvUlWx"
>
  <input
    className="sc-bwzfXH eiEJux sc-ifAKCX eUaGxb"
    defaultValue=""
    disabled={true}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-bZQynM gwkZNG"
    disabled={true}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`error\` prop matches with snapshot 1`] = `
<div
  className="sc-EHOje fvUlWx"
>
  <input
    className="sc-bwzfXH iGQVAk sc-ifAKCX hEXEIQ"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-bZQynM imdljl"
    disabled={false}
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`tiny\` prop matches with snapshot 1`] = `
<div
  className="sc-EHOje fvUlWx"
>
  <input
    className="sc-bwzfXH iHgAQK sc-ifAKCX eUaGxb"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="sc-bZQynM imdljl"
    disabled={false}
  >
    80
  </div>
</div>
`;
